--- a/src/site/apt/usage.apt.vm
+++ b/src/site/apt/usage.apt.vm
@@ -16,13 +16,40 @@
  *#
 
  ------
- Download
+ Usage
  ------
  Shadowhunt
  ------
 
-Download
+Usage
 
-	Version ${project.version} of ${project.name} can be found at
-	{{{http://search.maven.org/#artifactdetails|${project.groupId}|${project.artifactId}|${project.version}|maven-plugin}Maven
-	Central}}
+	The Package-Info Plugin provides several goals. The information below should
+	help you to get started. 
+
+	* package-info goal
+
+	This goal generates the missing package-info.java files. For packages that
+	already contain a package-info.java no new package-info.java is generated.
+
+	Use it directly from commandline:
+
++-----+
+mvn package-info:package-info
++-----+
+
+	* help goal
+
+	This goal display the help of the plugin (available goals).
+
+	Use it directly (and only) from commandline :
+
++-----+
+mvn package-info:help
++-----+
+
+	To display verbose help:
+
++-----+
+mvn package-info:help -Ddetail
++-----+
+
