--- a/src/site/apt/index.apt.vm
+++ b/src/site/apt/index.apt.vm
@@ -1,6 +1,6 @@
 #*
  * Maven package-info.java Plugin - Autogenerates package-info.java files with arbitrary headers
- * Copyright © 2012 - 2017 shadowhunt (dev@shadowhunt.de)
+ * Copyright © ${project.inceptionYear} shadowhunt (dev@shadowhunt.de)
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -15,7 +15,6 @@
  * You should have received a copy of the GNU General Public License
  * along with this program. If not, see <http://www.gnu.org/licenses/>.
  *#
-
  ------
  Introduction
  ------
