--- a/src/site/apt/download.apt.vm
+++ b/src/site/apt/download.apt.vm
@@ -1,6 +1,6 @@
 #*
  * Maven package-info.java Plugin - Autogenerates package-info.java files with arbitrary headers
- * Copyright © ${project.inceptionYear} shadowhunt (dev@shadowhunt.de)
+ * Copyright © 2012-2018 shadowhunt (dev@shadowhunt.de)
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
